--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.2
 blinker==1.8.2
 click==8.1.7
+Faker==26.0.0
 Flask==3.0.3
+Flask-HTTPAuth==4.8.0
 flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -13,7 +15,10 @@ marshmallow==3.21.3
 marshmallow-sqlalchemy==1.0.0
 mysql-connector-python==9.0.0
 packaging==24.1
+PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.16.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
 Werkzeug==3.0.3
